# ai-buildcamp-code

./: .gitignore  README.md  books.csv  pyproject.toml  test.ipynb
01-foundation/02-rag/: homework_Chapter_1.ipynb  notebook.ipynb  openai.ipynb  output.md  rag.ipynb  streaming_structured_rag.ipynb  structured_output_rag.ipynb
01-foundation/02-rag/books_text/: Physical Modeling in MATLAB.md  Think Complexity 2e.md  Think DSP.md  Think Java 2e.md  Think OS.md  Think Python 2e.md
