[project]
name = "ai-buildcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "markitdown[pdf]>=0.1.5",
    "minsearch>=0.0.9",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
]
